# home-sharedom

./: Cargo.toml  README.md
src/: bluetooth.rs  main.rs  web_server.rs
